<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/menuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
<!--
            <androidx.appcompat.widget.Toolbar
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:id="@+id/toolbar"
                android:elevation="4dp"
                android:background="@color/black"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_navigation_menu"/>-->

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/menuLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/navHostFragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        app:defaultNavHost="true"
        app:navGraph="@navigation/main"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-16dp"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp">

                    <ImageView
                        android:id="@+id/imageAccueil"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/bus_image_1"/>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/calibri"
                        android:text="@string/nom"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="50sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView"
                        android:fontFamily="@font/gotham"
                        android:text="@string/laphrase"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:layout_marginTop="130dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:textSize="20sp" />

                </RelativeLayout>



                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/textView2"
                    android:layout_marginRight="8dp"
                    android:backgroundTint="@color/black"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textColorHint="#FF8A99AF">

                            <AutoCompleteTextView
                                android:id="@+id/edtVilleDep"
                                android:background="@android:color/transparent"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_marginLeft="12dp"
                                android:drawableStart="@drawable/ic_location_vert"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="@string/depart"
                                android:contentDescription="Ville de départ"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textColorHint="#FF8A99AF">

                            <AutoCompleteTextView
                                android:id="@+id/edtVilleAr"
                                android:layout_marginLeft="12dp"
                                android:background="@android:color/transparent"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:drawableStart="@drawable/ic_location_rouge"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="@string/arrivée"
                                android:contentDescription="Ville d'arrivée"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/textView2"
                    android:layout_marginRight="8dp"
                    android:backgroundTint="@color/black"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textColorHint="#FF8A99AF">

                            <EditText
                                android:id="@+id/edtTime"
                                android:background="@android:color/transparent"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:drawableStart="@drawable/ic_clock"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="@string/heureDepart"
                                android:contentDescription="Heure de départ"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textColorHint="#FF8A99AF">

                            <EditText
                                android:id="@+id/date"
                                android:background="@android:color/transparent"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:drawableStart="@drawable/ic_calendar"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="@string/date"
                                android:contentDescription="Date"
                                android:inputType="date"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/search_buses"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/buttonshape"
                    android:fontFamily="@font/calibri"
                    android:text="@string/btn"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="30dp"/>

            </LinearLayout>


        </ScrollView>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/nav_header"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>