<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayout">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/logoft2" />

                        <TableLayout>
                            <TableRow>

                                <TextView
                                    android:id="@+id/textParam"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="10dp"
                                    android:gravity="center"
                                    android:text="@string/param"
                                    android:textColor="@color/white"
                                    android:fontFamily="@font/gotham"
                                    android:textSize="19sp" />
                            </TableRow>

                            <TableRow>

                                <TextView
                                    android:id="@+id/tParam"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="0dp"
                                    android:gravity="center"
                                    android:text="@string/param2"
                                    android:textColor="@color/white"
                                    android:fontFamily="@font/calibri"
                                    android:textSize="16sp" />
                            </TableRow>
                        </TableLayout>
                    </TableRow>

                </TableLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cLangues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:backgroundTint="#727272"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/langue"
                            android:fontFamily="@font/calibri"
                            android:id="@+id/tLangue"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:textSize="19sp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>