<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#1B1B1B"
    tools:context=".SignUpActivity">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/linearLayout">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cEnglish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:backgroundTint="#727272"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="4dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="100">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/english"
                                android:fontFamily="@font/calibri"
                                android:text="@string/english"
                                android:textColor="@color/black"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cSpanish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:backgroundTint="#727272"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="4dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="100">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/spanish"
                                android:fontFamily="@font/calibri"
                                android:text="@string/spanish"
                                android:drawablePadding="0dp"
                                android:textColor="@color/black"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cFrench"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:backgroundTint="#727272"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="4dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="100">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/french"
                                android:fontFamily="@font/calibri"
                                android:text="@string/french"
                                android:drawablePadding="0dp"
                                android:textColor="@color/black"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </ScrollView>

</LinearLayout>